# datathon-2026-all-rounder-rookie

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_pipeline.sh
data/: README.md  contest_rules.md  note.md  part1_questions.md
docs/: CUSTOMER_SEGMENTATION_REPORT.md  CV_DATA_SPLIT.md  ECOMMERCE_EDA_INSIGHT_REPORT_PART_2.md  ECOMMERCE_PERFORMANCE_ANALYSIS_REPORT.md  EDA_ANALYSIS_FRAMEWORK.md  EVALUATION_CRITERIA.md  MODEL_DOCUMENTATION.md  MODEL_EXPLAINABILITY.md  MODEL_REPORT.md  MODEL_SUBMISSION_STRATEGY.md  PRODUCT_INSIGHTS_AUDIT.md  PROJECT_STRUCTURE_AND_PUSH_RULES.md  VIETNAM_HOLIDAY_FEATURE_AUDIT.md
final_thang_model/: CV_DATA_SPLIT.md  MODEL_DOCUMENTATION.md  MODEL_REPORT.md  README.md  baseline_results.csv  full_feature_importance.csv  generate_flowchart.py  reproduce_best_kaggle_solution.ipynb  reproduce_full_pipeline.py  reproduce_submission.py  run_baselines.py  train_save_infer_blend.py
group_job/: audit_phase2_metrics.py  build_annotated_phase2_notebook.py  build_phase2_product_insights_notebook.py  create_annotated_phase2_notebook.py  phase2_business_insights.md  phase2_product_insights_eda_annotated.ipynb  phase2_product_insights_summary.md
model_thang/: README.md  advanced_time_series_experiments.py  build_direct_lgb_candidates.py  build_legacy_blend_regime.py  build_m5_style_blend.py  build_v4_regime_candidate.py  deep_sequence_direct_models.py  explainable_forecast_factory.py  forecast_pipeline.py  visualize_holiday_impact.py  visualize_top_features.py
notebooks/: baseline.ipynb  eda_product_insights.ipynb  (+5 more)
(+401 files in other folders)
