[project]
name = "vinuni-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.1.4",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
]
